--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-desktop.ini
-1024x1024
-normal.jpg
+*.ini
+*.jpg
 --*.html
 node_modules
-preview.png
-readme.txt
-main-shadow.js
-index-phongmaterial-tween.html
-js/------escher-droste--pbr.js
-js/SmartPointLight.js
-vs_depth.glsl
+preview.*
+*.txt
+*.glsl
+Gruntfile.js
+*.json
